objects/App_Config__c.object
<CustomObject><fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Integer_Value__c</fullName>
        <label>Integer Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <type>TextArea</type>
    </fields><customSettingsType>List</customSettingsType><description>Stores all configurable settings for USF</description><enableFeeds>false</enableFeeds><label>App Config</label><visibility>Public</visibility></CustomObject>